# qdm

./: .gitignore  Dockerfile  Dockerfile.mingw_w64_x86-64  Makefile  README.md  main.c  meson.build  osqp.pc  qdm.ini
include/: meson.build  qdm.h
include/qdm/: bias.h  config.h  data.h  evaluation.h  gsl.h  ijk.h  ispline.h  knots.h  logl.h  mcmc.h  mspline.h  parameters.h  phase.h  state.h  tau.h  theta.h
src/: bias.c  config.c  config.def  config.h  data.c  evaluation.c  gsl.c  ijk.c  ispline.c  knots.c  logl.c  main.c  mcmc.c  meson.build  mspline.c  parameters.c  state.c  tags  tau.c  theta.c
subprojects/: munit.wrap
test/: meson.build  test.c  test.h  test_gsl.c  test_ijk.c  test_ispline.c  test_knots.c  test_logl.c  test_mspline.c  test_tau.c  test_theta.c
test/data/: input.h5  y.csv
