install_headers(
  'qdm.h',
)

install_headers(
  'qdm/config.h',
  'qdm/data.h',
  'qdm/evaluation.h',
  'qdm/gsl.h',
  'qdm/ijk.h',
  'qdm/ispline.h',
  'qdm/knots.h',
  'qdm/logl.h',
  'qdm/mcmc.h',
  'qdm/mspline.h',
  'qdm/parameters.h',
  'qdm/state.h',
  'qdm/tau.h',
  'qdm/theta.h',

  subdir : 'qdm',
)
